k8s/ingressClass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: "k8s.io/ingress-nginx"
