k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: r4dis-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Origin, Content-Type, Authorization"

spec:
  ingressClassName: nginx
  rules:
  - host: r4dis.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: r4dis-frontend-service
            port:
              number: 80

  - host: api.r4dis.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: r4dis-backend-service
            port:
              number: 3001
